# work_contract

./: CMakeLists.txt  DESIGN.md  EXAMPLES.md  FUTURE.md  LICENSE  README.md
src/: CMakeLists.txt
src/executable/: CMakeLists.txt
src/executable/1_basic_contract_execution/: CMakeLists.txt  main.cpp
src/executable/1_basic_usage/: CMakeLists.txt  main.cpp
src/executable/2_multi_invocation/: CMakeLists.txt  main.cpp
src/executable/2_recurrent_scheduling/: CMakeLists.txt  main.cpp
src/executable/3_custom_cleanup/: CMakeLists.txt  main.cpp
src/executable/3_lock_free/: CMakeLists.txt  main.cpp
src/executable/4_blocking_mode/: CMakeLists.txt  main.cpp
src/executable/4_error_handling/: CMakeLists.txt  main.cpp
src/executable/5_exception_handling/: CMakeLists.txt  main.cpp
src/executable/5_spsc/: CMakeLists.txt  main.cpp
src/executable/6_data_ingress/: CMakeLists.txt  main.cpp
src/executable/6_spmc/: CMakeLists.txt  main.cpp
src/executable/7_produce_consume/: CMakeLists.txt  main.cpp
src/executable/7_tasks/: CMakeLists.txt  example_1.h  example_2.h  example_common.h  main.cpp
src/executable/8_data/: CMakeLists.txt  main.cpp
src/executable/benchmark/: CMakeLists.txt  enqueue_test.cpp  enqueue_test.h  main.cpp  test_harness.h
src/executable/example/hello_world/: CMakeLists.txt  main.cpp
src/executable/signal_tree_benchmark/: CMakeLists.txt  main.cpp
src/include/: atomic_shared_ptr.h  jthread.h  mpmc_queue.h  mpsc_queue.h  synchronization_mode.h
src/include/signal_tree/: helper.h  level.h  node.h  signal_index.h  tree.h
src/test/: CMakeLists.txt
src/test/blocking_work_contract_test/: CMakeLists.txt  main.cpp
src/test/signal_tree_test/: CMakeLists.txt  main.cpp
