if (WORK_CONTRACT_BUILD_BENCHMARK)
  add_subdirectory(benchmark)
  add_subdirectory(signal_tree_benchmark)
endif(WORK_CONTRACT_BUILD_BENCHMARK)    

add_subdirectory(1_basic_contract_execution)
add_subdirectory(2_recurrent_scheduling)
add_subdirectory(3_custom_cleanup)
add_subdirectory(4_blocking_mode)
add_subdirectory(5_exception_handling)
add_subdirectory(6_data_ingress)
add_subdirectory(7_tasks)